# ddstats-scripts

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  crontab  renames.sql  sync-database.sh  sync.sh
ddstats-scripts/: Cargo.toml
master-parser/: Cargo.toml
master-parser/src/: database.rs  datatypes.rs  main.rs
misc/: compile-map-inspect.sh  fetch-maps.sh  map-thumbnails.sh  mapinfo.py  mostplayed.py  points.py  rankings.py
rankpoints/: calc.js  index.js  package-lock.json  package.json  pnpm-lock.yaml
skins-scraper/: README.md  scrape.sh  scraper.py
sql/: create-indexes.sql  create-tables.sql  insert-rankedpoints.sql  mapstats.sql  most-played.sql  players.sql  playtime-maps-processed.sql  playtime-maps.sql  rankings.sql  rankpoints.sql  teampoints.sql  teamrankings.sql
sql/database-sync/: delete-map.sql  delete-mapinfo.sql  delete-race.sql  delete-teamrace.sql  insert-map.sql  insert-mapinfo.sql  insert-race.sql  insert-teamrace.sql
src/: database.rs  main.rs
src/database-sync/: mod.rs  models.rs
src/historical-rankedpoints/: mod.rs
src/master-parser/: database.rs  datatypes.rs  mod.rs
src/misc/: map_stats.rs  mod.rs  most_played.rs  players.rs  playtime_maps.rs  rankings.rs
