[package]
name = "ddstats-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros" ] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
serde_json = "1.0"
simd-json = "0.13"
tar = "0.4"
ureq = "2.5"
zstd = "0.13"
tracing-subscriber = "0.3"
tracing = "0.1"
csv = "1.3"
csv-diff = "0.1.0"
rayon = "1.8.0"

[profile.release]
debug = false
codegen-units = 1
lto = true

[profile.dev.package.sqlx-macros]
opt-level = 3
