[package]
name = "ddstats-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
rusqlite = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
simd-json = "0.7.0"
tar = "0.4.38"
ureq = "2.5.0"
zstd = "0.11.2"

[profile.release]
debug = false

[build]
rustflags = ["-C", "target-cpu=native"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+simd128"]
