[package]
name = "master-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_with = "3.4.0"
serde_json = "1.0.87"
simd-json = "0.13.6"
tar = "0.4.38"
ureq = "2.5.0"
zstd = "0.13"

[profile.release]
debug = false
codegen-units = 1
lto = true
